# type_poc_v3

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs  resolver.rs
crates/analyzer/src/expr/: literal.rs  mod.rs
crates/analyzer/src/function/: arrow.rs  mod.rs
crates/analyzer/src/stmt/: variable.rs
crates/analyzer/src/ts/: annotation.rs  function.rs  interface.rs  mod.rs  object.rs  reference.rs  type_param.rs
crates/analyzer/tests/: mod.rs
crates/fake_linter/: Cargo.toml
crates/fake_linter/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/type_info/: Cargo.toml
crates/type_info/src/: lib.rs  symbol.rs
crates/visitor/: Cargo.toml
crates/visitor/src/: lib.rs
src/: main.rs
src/lib/: es5.d.ts
src/tests/: 2.ts  invalid.ts
