[workspace]
members  = ["crates/*"]
resolver = "2"

[package]
name = "type_poc_v3"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace.dependencies]
biome_analyze = { git = "https://github.com/biomejs/biome.git" }
biome_js_parser = { git = "https://github.com/biomejs/biome.git" }
biome_js_syntax = { git = "https://github.com/biomejs/biome.git" }
biome_rowan = { git = "https://github.com/biomejs/biome.git" }