[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
visitor = { path = "../visitor" }
type_info = { path = "../type_info" }

biome_js_syntax = { workspace = true }
biome_rowan = { workspace = true }
rustc-hash = { workspace = true }


[dev-dependencies]
biome_js_parser = { workspace = true }